Aot Compilable changes -part2

--- a/.npmignore
+++ b/.npmignore
@@ -5,5 +5,13 @@ npm-debug.log
 Thumbs.db
 .DS_Store
 # Ignored files
+/src
+/aot-compiled
 *.ts
 !*.d.ts
+gulpfile.js
+tsconfig.json
+tsconfig-aot.json
+rollup.config.js
+_config.yml
+.idea
