--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp-typescript": "^3.1.5",
     "gulp-util": "^3.0.8",
     "merge2": "^1.0.3",
+    "rollup": "^0.41.5",
+    "rollup-plugin-buble": "^0.15.0",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.0.0",
     "tslint": "^4.2.0",
