--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "rxjs": "^5.2.0",
     "typescript": "^2.2.0",
     "typings": "^2.1.0",
-    "zone.js": "^0.7.7"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/common": "^2.2.1",
-    "@angular/compiler": "^2.2.1",
-    "@angular/compiler-cli": "^2.2.1",
-    "@angular/core": "^2.2.1",
-    "@angular/platform-browser": "^2.2.1",
-    "@angular/platform-browser-dynamic": "^2.2.1",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
     "@types/chai": "^3.4.33",
     "@types/core-js": "^0.9.34",
     "@types/jasmine": "^2.5.36",
@@ -41,8 +41,8 @@
     "typescript": "^2.2.1"
   },
   "peerDependencies": {
-    "@angular/common": "^2.2.1",
-    "@angular/core": "^2.2.1"
+    "@angular/common": "^4.0.0",
+    "@angular/core": "^4.0.0"
   },
   "scripts": {
     "prepublish": "gulp",
@@ -57,6 +57,7 @@
     "angular",
     "ng",
     "angular2",
+    "angular4",
     "drag",
     "drop",
     "dragdrop"
