--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "rxjs": "^5.2.0",
-    "typescript": "^2.2.0",
-    "typings": "^2.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "codelyzer": "^3.1.2",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
@@ -36,8 +35,7 @@
     "rollup": "^0.41.5",
     "rollup-plugin-buble": "^0.15.0",
     "run-sequence": "^1.2.2",
-    "rxjs": "^5.0.0",
-    "tslint": "^4.2.0",
+    "tslint": "^5.0.0",
     "typescript": "^2.2.1"
   },
   "peerDependencies": {
