angular6 update and corresponding changes. Changed packaging from gulp to ng-cli

--- a/package.json
+++ b/package.json
@@ -1,69 +1,66 @@
 {
-  "name": "ngx-dragdrop",
-  "version": "1.0.1",
-  "description": "Minimal Angular 2.0+ module for HTML5 Drag and Drop",
-  "main": "index.js",
+  "name": "ngx-dd",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve -o",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "build-lib": "ng build ngx-dragdrop",
+    "build-lib:w": "ng build ngx-dragdrop --watch",
+    "npm-pack": "cd dist/ngx-dragdrop && npm pack",
+    "package": "npm run build-lib && npm run npm-pack",
+    "publish-dry": "cd dist/ngx-dragdrop && npm publish --dry-run",
+    "publish-lib": "cd dist/ngx-dragdrop && npm publish",
+    "publish:dry": "npm run package && npm run publish-dry",
+    "publish": "npm run package && npm run publish-lib"
+  },
+  "private": true,
   "dependencies": {
-    "rxjs": "^5.2.0",
-    "zone.js": "^0.8.4"
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.0.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "@clr/angular": "^0.13.10",
+    "@clr/icons": "^0.13.10",
+    "@clr/ui": "^0.13.10",
+    "@webcomponents/custom-elements": "^1.2.1",
+    "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "rxjs": "~6.2.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "codelyzer": "^3.1.2",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@types/chai": "^3.4.33",
-    "@types/core-js": "^0.9.34",
-    "@types/jasmine": "^2.5.36",
-    "@types/sinon": "^1.16.30",
-    "@types/sinon-chai": "^2.7.27",
-    "@types/webpack": "^2.2.4",
-    "core-js": "^2.4.1",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-inline-ng2-template": "^4.0.0",
-    "gulp-preprocess": "^2.0.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-typescript": "^3.1.5",
-    "gulp-util": "^3.0.8",
-    "merge2": "^1.0.3",
-    "rollup": "^0.41.5",
-    "rollup-plugin-buble": "^0.15.0",
-    "run-sequence": "^1.2.2",
-    "tslint": "^5.0.0",
-    "typescript": "^2.2.1"
-  },
-  "peerDependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/core": "^4.0.0"
-  },
-  "scripts": {
-    "prepublish": "gulp",
-    "postversion": "git push && git push --tags",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/envyN/ngx-dragdrop.git"
-  },
-  "keywords": [
-    "angular",
-    "ng",
-    "angular2",
-    "angular4",
-    "drag",
-    "drop",
-    "dragdrop"
-  ],
-  "author": "Naveen Adarsh",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/envyN/ngx-dragdrop/issues"
-  },
-  "homepage": "https://github.com/envyN/ngx-dragdrop#readme"
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-ng-packagr": "~0.8.0",
+    "@angular/cli": "~6.2.8",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.3.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.1.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": "^0.32.1",
+    "tslib": "^1.9.0",
+    "tslint": "~5.11.0",
+    "typescript": "~2.9.2"
+  }
 }
