--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,39 @@
-.idea
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Node generated files
-node_modules
-npm-debug.log
-
-# OS generated files
-Thumbs.db
-.DS_Store
-
-# Ignored files
-src/**/*.js
-*.map
-*.d.ts
+# compiled output
 /dist
-*.metadata.json
+/tmp
+/out-tsc
+
+# dependencies
+/node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
 yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
