--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,29 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "baseUrl": "./",
+    "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "declaration": false,
+    "module": "es2015",
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false,
-    "declaration": true
-  },
-  "exclude": [
-    "dist",
-    "node_modules",
-    "typings/main",
-    "typings/main.d.ts"
-  ],
-  "angularCompilerOptions": {
-    "genDir": "compiled"
+    "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
+    "paths": {
+      "ngx-dragdrop": [
+        "dist/ngx-dragdrop"
+      ],
+      "ngx-dragdrop/*": [
+        "dist/ngx-dragdrop/*"
+      ]
+    }
   }
 }
