--- a/projects/ngx-dragdrop/package.json
+++ b/projects/ngx-dragdrop/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ngx-dragdrop",
-  "version": "6.0.0-beta.1",
+  "version": "6.0.0",
   "description": "Minimal Angular 2.0+ module for HTML5 Drag and Drop",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0",
+    "@angular/core": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,9 @@
     "ng",
     "angular2",
     "angular4",
+    "angular5",
+    "angular6",
+    "angular7",
     "drag",
     "drop",
     "dragdrop"
