upgrade to angular 8

--- a/projects/ngx-dragdrop/package.json
+++ b/projects/ngx-dragdrop/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ngx-dragdrop",
-  "version": "6.0.0",
+  "version": "8.0.0",
   "description": "Minimal Angular 2.0+ module for HTML5 Drag and Drop",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0"
+    "@angular/common": "^8.0.0",
+    "@angular/core": "^8.0.0"
   },
   "repository": {
     "type": "git",
