Add example for usage with angular components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,7 @@
     ],
     "paths": {
       "ngx-dragdrop": [
-        "dist/ngx-dragdrop"
-      ],
-      "ngx-dragdrop/*": [
-        "dist/ngx-dragdrop/*"
+        "projects/ngx-dragdrop/src/public_api"
       ]
     }
   }
