--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build --prod --base-href=/ngx-dragdrop/",
+    "build": "ng build --configuration production --base-href=/ngx-dragdrop/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -19,48 +19,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/core": "^15.2.9",
+    "@angular/forms": "^15.2.9",
     "@angular/http": "^8.0.0-beta.10",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@clr/angular": "^2.3.7",
-    "@clr/icons": "^2.3.7",
-    "@clr/ui": "^2.3.7",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/router": "^15.2.9",
+    "@clr/angular": "~15.4.0",
+    "@clr/icons": "~13.0.2",
+    "@clr/ui": "~15.4.0",
+    "@cds/core": "~6.4.2",
     "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^3.6.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.5.4",
-    "zone.js": "~0.9.1"
+    "rxjs": "~7.5.5",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.25",
-    "@angular-devkit/build-ng-packagr": "~0.803.25",
-    "@angular/cli": "~8.3.25",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "^15.2.8",
+    "@angular/cli": "^15.2.8",
+    "@angular/compiler-cli": "^15.2.9",
+    "@angular/language-service": "^15.2.9",
+    "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.17.15",
-    "codelyzer": "^5.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^5.7.1",
-    "protractor": "~5.4.0",
-    "ts-node": "~8.6.2",
+    "@types/node": "~18.15.13",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~4.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^14.2.2",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.7.0",
     "tsickle": "^0.36.0",
     "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.9.5"
   }
 }
