--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,18 +6,19 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
+    "module": "ES2022",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2017",
+      "ES2022",
       "dom"
     ],
+    "useDefineForClassFields": false,
     "paths": {
       "ngx-dragdrop": [
         "projects/ngx-dragdrop/src/public_api"
